# svg-parser

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yaml  test.yaml
include/dom/: DomDocument.h  DomElement.h  DomElementAttribute.h
include/exception/: DomErrorCode.h  DomException.h  Exception.h  HelperErrorCode.h  HelperException.h  SvgErrorCode.h  SvgException.h
include/helper/: FileStreamHelper.h  String.h  Vector.h
include/program/: Program.h
include/svg/: Circle.h  Rect.h  Shape.h  Svg.h
lib/: CMakeLists.txt
lib/dom/: DomDocument.cpp  DomElement.cpp  DomElementAttribute.cpp
lib/exception/: DomException.cpp  HelperException.cpp  SvgException.cpp
lib/helper/: FileStreamHelper.cpp  String.cpp  Vector.cpp
lib/program/: Program.cpp
lib/svg/: Circle.cpp  Rect.cpp  Shape.cpp  Svg.cpp
test/: CMakeLists.txt
test/e2e/: SvgParserTest.cpp
test/fixtures/: dom-document.xml  dom-single-attribute.xml  dom-single-element-with-children.xml  dom-single-element.xml
test/unit/dom/: DomDocumentTest.cpp  DomElementAttributeTest.cpp  DomElementTest.cpp
